# navigation2

./: .dockerignore  .drone.yml  .gitattributes  .gitconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .semgrep.yml  .semgrepignore  .travis.yml  CHANGELOG  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.crystal  Dockerfile.full_ros_build  Dockerfile.release_branch  Doxyfile  LAUNCH.md  LICENSE  README.md  TODO  cancel  codecov.yml  dexory_acceleration_notes.md  docker-bake.hcl  execute  full_ros_build.Dockerfile  genindex.html  index.html  low_accel_notes.md  minimal_repos.txt  nav2_minimal.dockerfile  nav2_pkgs.txt  objects.inv  pixi.toml  release_branch.Dockerfile  release_notes.html  search.html  searchindex.js  (+3 more)
BehaviorTree.CPP/: CMakeLists.txt  package.xml
BehaviorTree.CPP/examples/: t04_blackboard.cpp
base_local_planner/: CHANGELOG.rst  CMakeLists.txt  base_local_planner_cmake.patch  blp_plugin.xml  package.xml  setup.py
base_local_planner/cfg/: BaseLocalPlanner.cfg  LocalPlannerLimits.cfg
base_local_planner/src/: costmap_model.cpp  footprint_helper.cpp  goal_functions.cpp  latched_stop_rotate_controller.cpp  local_planner_util.cpp  map_cell.cpp  map_grid.cpp  map_grid_cost_function.cpp  map_grid_visualizer.cpp  obstacle_cost_function.cpp  odometry_helper_ros.cpp  oscillation_cost_function.cpp  point_grid.cpp  prefer_forward_cost_function.cpp  simple_scored_sampling_planner.cpp  simple_trajectory_generator.cpp  trajectory.cpp  trajectory_planner.cpp  trajectory_planner_ros.cpp  twirling_cost_function.cpp  voxel_grid_model.cpp
base_local_planner/test/: footprint_helper_test.cpp  gtest_main.cpp  line_iterator_test.cpp  map_grid_test.cpp  trajectory_generator_test.cpp  utest.cpp  velocity_iterator_test.cpp  wavefront_map_accessor.h
geographic_msgs/: CHANGELOG.rst  CMakeLists.txt  geographic_msgs_mapping_rule.yaml  mainpage.dox  package.xml
geographic_msgs/msg/: BoundingBox.msg  GeoPath.msg  GeoPoint.msg  GeoPointStamped.msg  GeoPolygon.msg  GeoPose.msg  GeoPoseStamped.msg  GeographicMap.msg  GeographicMapChanges.msg  KeyValue.msg  MapFeature.msg  RouteNetwork.msg  RoutePath.msg  RouteSegment.msg  WayPoint.msg
geographic_msgs/srv/: GetGeoPath.srv  GetGeographicMap.srv  GetPatrolPath.srv  GetRoutePlan.srv  UpdateGeographicMap.srv
lazy_theta_star_planner/: CMakeLists.txt  global_planner_plugin.xml  package.xml
lazy_theta_star_planner/src/: lazy_theta_star2.cpp  lazy_theta_star_planner.cpp
mppic/: .clang-tidy  .clangd  .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE.md  README.md  critics.xml  mppic.xml  package.xml
mppic/src/: controller.cpp  critic_manager.cpp  optimizer.cpp  path_handler.cpp  trajectory_visualizer.cpp
mppic/test/: CMakeLists.txt  controller_test.cpp  optimizer_test.cpp
nav2_amcl/: CLAUDE.md  CMakeLists.txt  README.md  package.xml  plugins.xml
nav2_amcl/src/: amcl_node.cpp  amcl_node.hpp  main.cpp
nav2_amcl/test/: CMakeLists.txt  test_amcl_convert_map.cpp  test_dynamic_parameters.cpp  test_pose_persistence.cpp  test_random_seed_parameter.cpp
nav2_assisted_teleop/: CMakeLists.txt  package.xml
nav2_assisted_teleop/src/: main.cpp  nav2_assisted_teleop.cpp
nav2_astar_planner/: CMakeLists.txt  README.md  package.xml
nav2_astar_planner/src/: astar_planner.cpp  main.cpp
nav2_behavior_tree/: CLAUDE.md  CMakeLists.txt  README.md  groot_instructions.md  nav2_behavior_tree-extras.cmake  nav2_tree_nodes.xml  package.xml  plugins_list.hpp.in
nav2_behavior_tree/cmake/: generate_tree_nodes_xml.cmake  plugin_list.txt.in
nav2_behavior_tree/plugins/: back_up_action.cpp  clear_costmap_service.cpp  compute_path_to_pose_action.cpp  first_completion.cpp  follow_path_action.cpp  goal_reached_condition.cpp  initial_pose_received_condition.cpp  is_stuck_condition.cpp  rate_controller.cpp  recovery_node.cpp  reinitialize_global_localization_service.cpp  spin_action.cpp  wait_action.cpp
nav2_behavior_tree/src/: behavior_tree_engine.cpp  bt_nodes.cpp  first_completion.cpp  generate_nav2_tree_nodes_xml.cpp  generate_tree_nodes_xml_cli.cpp  recovery_node.cpp
nav2_behavior_tree/test/: CMakeLists.txt  dummy_tree_node.hpp  test_action_server.hpp  test_behavior_tree_fixture.hpp  test_bt_conversions.cpp  test_bt_utils.cpp  test_dummy_tree_node.hpp  test_json_utils.cpp  test_loop_rate.cpp  test_transform_handler.hpp  transform_handler.cpp  transform_handler.hpp
nav2_behaviors/: CLAUDE.md  CMakeLists.txt  README.md  behavior_plugin.xml  package.xml
nav2_behaviors/plugins/: assisted_teleop.cpp  assisted_teleop.hpp  back_up.cpp  back_up.hpp  drive_on_heading.cpp  drive_on_heading.hpp  spin.cpp  spin.hpp  wait.cpp  wait.hpp
nav2_behaviors/src/: back_up.cpp  back_up_tmp.cpp  behavior_server.cpp  full_rotation.cpp  main.cpp  recovery_manager.cpp  spin.cpp
nav2_behaviors/test/: CMakeLists.txt  test_behaviors.cpp  test_recoveries.cpp
nav2_bringup/: CLAUDE.md  CMakeLists.txt  README.md  package.xml
nav2_bringup/bringup/: CMakeLists.txt  README.md  package.xml
nav2_bringup/config/: control.yaml  nav2_default_view.rviz  system_test.rviz
nav2_bringup/env-hooks/: nav2_bringup.dsv.in
nav2_bringup/graphs/: depot_graph.geojson  turtlebot3_graph.geojson  turtlebot4_graph_warehouse.geojson  warehouse_graph.geojson
nav2_bringup/launch/: bringup_launch.py  bt_navigator.xml  cbf_supervisor_launch.py  cloned_multi_tb3_simulation_launch.py  composed_bringup_launch.py  core.launch.py  developer_launch.py  (+49 more)
nav2_bt_navigator/: CLAUDE.md  CMakeLists.txt  README.md  nav2_bt_navigator_plugin.xml  navigator_plugins.xml  package.xml
nav2_bt_waypoint_follower/: CMakeLists.txt  README.md  package.xml
nav2_ceres_costaware_smoother/: CMakeLists.txt  README.md  nav2_ceres_costaware_smoother.xml  package.xml
nav2_collision_monitor/: CLAUDE.md  CMakeLists.txt  README.md  package.xml
nav2_common/: CLAUDE.md  CMakeLists.txt  nav2_common-extras.cmake  package.xml  setup.cfg
nav2_composition/: CMakeLists.txt  README.md  package.xml
nav2_constrained_controller/: CMakeLists.txt  constrained_controller_plugin.xml  esdf_critic_plugin.xml  package.xml
(+5552 files in other folders)
