<package>
  <name>behavior_tree_core</name>
  <version>2.0.0</version>
  <description>
  This package provides a behavior trees core.
  </description>

  <maintainer email="michele.colledanchise@gmail.com">Michele Colledanchise</maintainer>
  <maintainer email="davide.faconti@eurecat.org">Davide Faconti</maintainer>

  <license>MIT</license>

  <author>Michele Colledanchise</author>
  <author>Davide Faconti</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
